# cvai

./: .gitignore  README.md  agent.ipynb  example_job_description.txt  example_resume.txt  file_parser.ipynb  main.py  pyproject.toml  test.ipynb
parsed_files/: cvMeta.md
src/models/: states.py
src/parsers/input/: pdf.py
src/resume/state/: states.py
