[project]
name = "cvai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.9",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "pip>=25.1.1",
    "pydantic==2.9.1",
    "pymupdf4llm>=0.0.25",
    "unstructured[all-docs]>=0.17.2",
    "vertexai>=1.71.1",
]
